Added endpoints for: updating a user by admin, updating a user profile, adding an avatar, defining a user role, and other improvements.
