# app/Models/User.php
@@ -19,6 +19,8 @@ use Illuminate\Support\Facades\Log;
  *     @OA\Property(property="name", type="string", example="John Doe"),
  *     @OA\Property(property="email", type="string", format="email", example="user@example.com"),
  *     @OA\Property(property="phone", type="string", example="+201234567890"),
+ *     @OA\Property(property="avatar", type="string", nullable=true, example="avatars/user-avatar.jpg"),
+ *     @OA\Property(property="is_admin", type="boolean", example=false),
  *     @OA\Property(property="email_verified_at", type="string", format="date-time", nullable=true),
  *     @OA\Property(property="created_at", type="string", format="date-time"),
  *     @OA\Property(property="updated_at", type="string", format="date-time")
@@ -39,6 +41,8 @@ class User extends Authenticatable implements MustVerifyEmail
         'email',
         'phone',
         'password',
+        'is_admin',
+        'avatar'
     ];
 
     /**
@@ -56,13 +60,12 @@ class User extends Authenticatable implements MustVerifyEmail
      *
      * @return array<string, string>
      */
-    protected function casts(): array
-    {
-        return [
-            'email_verified_at' => 'datetime',
-            'password' => 'hashed',
-        ];
-    }
+    protected $casts = [
+        'email_verified_at' => 'datetime',
+        'password' => 'hashed',
+        'is_admin' => 'boolean',
+        'is_active' => 'boolean'
+    ];
 
     public function sendEmailVerificationNotification()
     {
